added support for page reload message, summary table css
Signed-off-by: Vignesh R <vignez.sr@gmail.com>

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-  <button id="clickme">click me</button>
+  <button id="clickme">After Reload click here</button>
     <script type="text/javascript" src="popup.js"></script>
 </body>
 </html>
